--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
   <title>Carosello Mono Array</title>
 </head>
 <body>
+
+  <main>
+    <div class="container">
+      <div class="slider">
+        <div class="images">
+        </div>
+        <div class="btn left"></div>
+        <div class="btn right"></div>
+      </div>
+    </div>
+  </main>
   
 
   <script src="js/script.js"></script>
