[add]css property container and images

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <div class="container">
       <div class="slider">
         <div class="images">
+          <!-- <img src="img/01.webp" alt="">
+          <img src="img/02.webp" alt="">
+          <img src="img/03.webp" alt="">
+          <img src="img/04.webp" alt=""> -->
         </div>
         <div class="btn left"></div>
         <div class="btn right"></div>
