--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
   <main>
     <div class="container">
       <div class="slider">
-        <div class="images">
+        <div class="imageCont">
           <!-- <img src="img/01.webp" alt="">
           <img src="img/02.webp" alt="">
           <img src="img/03.webp" alt="">
           <img src="img/04.webp" alt=""> -->
         </div>
-        <div class="btn left"></div>
-        <div class="btn right"></div>
+        <div class="btn up"></div>
+        <div class="btn down"></div>
       </div>
     </div>
   </main>
