--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <!-- Css link  -->
   <link rel="stylesheet" href="css/style.css">
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Carosello Mono Array</title>
@@ -18,8 +20,8 @@
           <img src="img/03.webp" alt="">
           <img src="img/04.webp" alt=""> -->
         </div>
-        <div class="btn up"></div>
-        <div class="btn down"></div>
+        <div class="btn up"><i class="fa-solid fa-chevron-up"></i></div>
+        <div class="btn down"><i class="fa-solid fa-chevron-down"></i></div>
       </div>
     </div>
   </main>
