--- a/index.html
+++ b/index.html
@@ -12,18 +12,28 @@
 <body>
 
   <main>
+    
     <div class="container">
       <div class="slider">
+        
         <div class="imageCont">
           <!-- <img src="img/01.webp" alt="">
           <img src="img/02.webp" alt="">
           <img src="img/03.webp" alt="">
           <img src="img/04.webp" alt=""> -->
         </div>
-        <div class="btn up"><i class="fa-solid fa-chevron-up"></i></div>
-        <div class="btn down"><i class="fa-solid fa-chevron-down"></i></div>
+        <div class="thumb">
+          <img src="img/01.webp" alt="">
+          <img src="img/02.webp" alt="">
+          <img src="img/03.webp" alt="">
+          <img src="img/04.webp" alt="">
+          <img src="img/05.webp" alt="">
+          <div class="btn up"><i class="fa-solid fa-chevron-up"></i></div>
+          <div class="btn down"><i class="fa-solid fa-chevron-down"></i></div>
+        </div>
       </div>
     </div>
+
   </main>
   
 
