[fix] arrow bug

--- a/index.html
+++ b/index.html
@@ -22,9 +22,12 @@
           <img src="img/03.webp" alt="">
           <img src="img/04.webp" alt=""> -->
         </div>
-        <div class="btn up"><i class="fa-solid fa-chevron-up"></i></div>
-        <div class="btn down"><i class="fa-solid fa-chevron-down"></i></div>
-        <div class="thumb">
+        <div class="slider-right">
+          <div class="btn up"><i class="fa-solid fa-chevron-up"></i></div>
+          <div class="btn down"><i class="fa-solid fa-chevron-down"></i></div>
+          <div class="thumb">
+          </div>
+
         </div>
       </div>
     </div>
